# tufa_oauth2

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: blog.rs  error.rs  mod.rs  post.rs  token.rs
backend/src/repository/: ddb.rs
common/: Cargo.toml
common/src/model/: blog.rs  post.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
frontend/src/component/: blog.rs  post.rs
