[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = {version = "^4", features = ["openssl"]}
actix-web-lab = "0.16.1"
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
chrono = "^0"
common = {path = "../common"}
derive_more = "^0"
env_logger = "0.8"
frontend = {path = "../frontend"}
jsonwebtokens-cognito = "0.1.1"
log = "^0.4"
oauth2 = "4.2"
openssl = "0.10"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
strum = {version = "^0.24", features = ["derive"]}
strum_macros = "^0.24"
uuid = {version = "^0.8", features = ["v4", "wasm-bindgen"]}
