[package]
edition = "2021"
name = "frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "^0", features = ["wasmbind"]}
common = {path = "../common"}
log = "0.4.6"
reqwasm = "0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
wasm-bindgen-futures = "0.4"
wasm-logger = "^0.2"
yew = "0.19.3"
yew-oauth2 = "0.3"
yew-router = "0.16"
